--- a/index.html
+++ b/index.html
@@ -8,17 +8,399 @@
   <!-- Bootstrap Stylesheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- Custom Stylesheet -->
+  <link rel="stylesheet" href="Style/style.css">
 
   <title>Document</title>
 </head>
 
 <body>
+  <!-- Header Starts -->
+  <header>
+    <!-- Navbar Starts -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="images/logo.png" alt="">
+        </a>
+
+        <form class="d-flex ">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        </form>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link " href="#home">Home</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#product">Product</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact Us</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Us</a>
+            </li>
+
+          </ul>
+
+        </div>
+      </div>
+    </nav>
+    <!-- Navbar Ends -->
+
+    <!-- Slider Starts -->
+    <section id="home" class="container my-lg-5 my-md-4 my-3">
+      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner bg-banner">
+          <div class="carousel-item active" data-bs-interval="10000">
+
+            <div class="row g-5 g-md-4 g-lg-0 p-lg-5 p-md-4 p-4 d-lg-flex d-md-block d-flex align-items-center">
+              <div class="col-lg-7 ">
+                <h1>Cool Dude Headphone</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                  duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <h2>$420</h2>
+                <button class=" btn btn-banner">
+                  Buy Now
+                  <img src="images/arrow.png" alt="">
+                </button>
+              </div>
+              <div class="col-lg-5 d-flex justify-content-center ">
+                <img src="images/banner-images/headphone.png" class="w-75" alt="...">
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item" data-bs-interval="10000">
+            <div class="row p-lg-5 p-md-5 p-5 d-lg-flex d-md-block d-flex align-items-center">
+              <div class="col-lg-7">
+                <h1>Mi LED TV 4A PRO 32</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                  duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <h2>$1289</h2>
+                <button class="btn btn-banner">
+                  Buy Now
+                  <img src="images/arrow.png" alt="">
+                </button>
+              </div>
+              <div class="col-lg-5 d-flex justify-content-center">
+                <img src="images/banner-images/tv.png" class="w-75 img-fluid" alt="...">
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item " data-bs-interval="10000">
+            <div class="row p-lg-5 p-md-5 p-5 d-lg-flex d-md-block d-flex align-items-center">
+              <div class="col-lg-7">
+                <h1 class="banner-price">XBOX SERIES S</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                  duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <h2>$420</h2>
+                <button class="btn btn-banner">
+                  Buy Now
+                  <img src="images/arrow.png" alt="">
+                </button>
+              </div>
+              <div class="col-lg-5 d-flex justify-content-center">
+                <img src="images/banner-images/xbox.png" class="w-75" alt="...">
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+    </section>
+    <!-- Slider Ends -->
+
+    <!-- Catagory Stats -->
+    <section id="product" class="container my-lg-5 my-md-5 my-5">
+      <h1>Categories</h1>
+
+      <div class="row g-lg-4 g-md-3 g-3 align-items-center ">
+        <div class="col-lg-4 col-md-6 col-12 ">
+          <a class="py-2 px-5 border bg-light watch-bg d-flex align-items-center justify-content-between catagory btn"
+            href="#watch">
+            <h1>Watch</h1>
+            <img src="images/categories/watch.png" class="hw" alt="">
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-12 ">
+          <a class="py-2 px-5  border bg-light bag-bg d-flex align-items-center justify-content-between catagory"
+            href="#bag">
+            <h1>Bag</h1>
+            <img src="images/categories/bag.png" class="hw" alt="">
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-12 ">
+          <a class="py-2 px-5  border bg-light shoe-bg d-flex align-items-center justify-content-between catagory"
+            href="#shoe">
+            <h1>Shoes</h1>
+            <img src="images/categories/shoes.png" class="hw" alt="">
+          </a>
+        </div>
+      </div>
+
+    </section>
+
+    <!-- Catagory Ends -->
+
+  </header>
+  <!-- Header Ends -->
+
+  <main>
+
+    <!-- Product Section Stars -->
+    <!-- watch cards section -->
+    <section id="watch" class=" container my-lg-5">
+      <div class="product d-flex justify-content-between align-items-center px-2">
+        <h1>Shoes</h1>
+        <a href="">See All</a>
+      </div>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+
+        <div class="col align-items-lg-center ">
+          <div class="card h-100 align-items-center shadow p-3 border-round">
+            <img src=" images/watch/watch-1.png" class="card-img-top card-image-width" alt=" ...">
+            <div class="card-body">
+              <h5 class="card-title text-center">Frédérique Constant</h5>
+              <p class="card-text text-center">Founded in 1988 by Dutch couple Peter Stas and Aletta Stas-Bax,
+                Frédérique Constant's mission statement is to craft fine luxury watches using Swiss techniques but
+                sold
+                at a relatively accessible price point.
+              </p>
+            </div>
+            <div class="card-footer justify-content-lg-center">
+              <h3 class="text-center">$1289</h3>
+              <button class="btn btn-buy">
+                Buy Now
+                <img src="images/arrow.png" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col align-items-lg-center ">
+          <div class="card h-100 align-items-center shadow p-3 border-round">
+            <img src=" images/watch/watch-2.png" class="card-img-top card-image-width alt=" ...">
+            <div class="card-body ">
+              <h5 class="card-title text-center">Longinesn</h5>
+              <p class="card-text text-center">Longines was founded in 1832 by Auguste Agassiz and two partners in
+                Saint-Imier, Switzerland, where the company is still headquartered. Its iconic winged hourglass
+                logo is
+                the oldest logo of its kind still being used in its original form.
+              </p>
+            </div>
+            <div class="card-footer justify-content-lg-center">
+              <h3 class="text-center">$1289</h3>
+              <button class="btn btn-buy">
+                Buy Now
+                <img src="images/arrow.png" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col align-items-lg-center ">
+          <div class="card h-100 align-items-center shadow p-3 border-round">
+            <img src=" images/watch/watch-3.png" class="card-img-top card-image-width alt=" ...">
+            <div class="card-body ">
+              <h5 class="card-title text-center">Piaget</h5>
+              <p class="card-text text-center">Georges-Édouard Piaget set up his first workshop on his family farm
+                in
+                the village of La Côte-aux-Fées in the Swiss mountains in 1874, launching the brand that is now
+                famous
+                for offering the thinnest automatic watch in the world.
+              </p>
+            </div>
+            <div class="card-footer justify-content-lg-center">
+              <h3 class="text-center">$1289</h3>
+              <button class="btn btn-buy">
+                Buy Now
+                <img src="images/arrow.png" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Bag cards section -->
+    <section id="bag" class=" container my-lg-5">
+      <div class="product d-flex justify-content-between align-items-center px-2">
+        <h1>Bag</h1>
+        <a href="">See All</a>
+      </div>
+      <div id="root" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+
+        <div class="col align-items-lg-center ">
+          <div class="card h-100 align-items-center shadow p-3 border-round">
+            <img id="one" src="images/bags/bag-1.png" class="card-img-top alt=" ...">
+            <div class="card-body">
+              <h5 class="card-title text-center">Ison Backpack</h5>
+              <p class="card-text text-center">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+              </p>
+            </div>
+            <div class="card-footer justify-content-lg-center">
+              <h3 class="text-center">$1289</h3>
+              <button class="btn btn-buy">
+                Buy Now
+                <img src="images/arrow.png" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col align-items-lg-center ">
+          <div class="card h-100 align-items-center shadow p-3 border-round">
+            <img src="images/bags/bag-2.png" class="card-img-top  alt=" ...">
+            <div class="card-body ">
+              <h5 class="card-title text-center">Biaowang Backpack</h5>
+              <p class="card-text text-center">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+              </p>
+            </div>
+            <div class="card-footer justify-content-lg-center">
+              <h3 class="text-center">$1289</h3>
+              <button class="btn btn-buy">
+                Buy Now
+                <img src="images/arrow.png" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col align-items-lg-center ">
+          <div class="card h-100 align-items-center shadow p-3 border-round">
+            <img src="images/bags/bag-3.png" class="card-img-top alt=" ...">
+            <div class="card-body ">
+              <h5 class="card-title text-center">Dxyizu WS54 Smart</h5>
+              <p class="card-text text-center">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+              </p>
+            </div>
+            <div class="card-footer justify-content-lg-center">
+              <h3 class="text-center">$1289</h3>
+              <button class="btn btn-buy">
+                Buy Now
+                <img src="images/arrow.png" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- shoe cards section -->
+    <section id="shoe" class=" container my-lg-5 pb-lg-5 pb-mb-4 pb-4">
+      <div class="product d-flex justify-content-between align-items-center px-2">
+        <h1>Shoes</h1>
+        <a href="">See All</a>
+      </div>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+
+        <div class="col align-items-lg-center ">
+          <div class="card h-100 align-items-center shadow p-3 border-round">
+            <img src="images/shoes/shoe-1.png" class="card-img-top alt=" ...">
+            <div class="card-body">
+              <h5 class="card-title text-center">Reebok Dart Men’s Sho</h5>
+              <p class="card-text text-center">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+              </p>
+            </div>
+            <div class="card-footer justify-content-lg-center">
+              <h3 class="text-center">$1289</h3>
+              <button class="btn btn-buy">
+                Buy Now
+                <img src="images/arrow.png" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col align-items-lg-center ">
+          <div class="card h-100 align-items-center shadow p-3 border-round">
+            <img src="images/shoes/shoe-2.png" class="card-img-top  alt=" ...">
+            <div class="card-body ">
+              <h5 class="card-title text-center">Reebok Pump</h5>
+              <p class="card-text text-center">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+              </p>
+            </div>
+            <div class="card-footer justify-content-lg-center">
+              <h3 class="text-center">$1289</h3>
+              <button class="btn btn-buy">
+                Buy Now
+                <img src="images/arrow.png" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col align-items-lg-center ">
+          <div class="card h-100 align-items-center shadow p-3 border-round">
+            <img src="images/shoes/shoe-3.png" class="card-img-top alt=" ...">
+            <div class="card-body ">
+              <h5 class="card-title text-center">Reebok All Terrain</h5>
+              <p class="card-text text-center">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+              </p>
+            </div>
+            <div class="card-footer justify-content-lg-center">
+              <h3 class="text-center">$1289</h3>
+              <button class="btn btn-buy">
+                Buy Now
+                <img src="images/arrow.png" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Product Section Ends -->
+
+  </main>
+
+  <footer>
+    <section id="contact"
+      class="container my-lg-5 my-mb-5 my-5 d-flex justify-content-center my-lg-5 align-items-center">
+      <div>
+        <h1 class="text-center">LET'S STAY IN TOUCH</h1>
+        <p class="text-center">Get updates on sales specials and more</p>
+        <div class="input-group">
+          <input id="comment" type="text" class="form-control input-group" placeholder=" Enter your email"
+            aria-label="Recipient's username" aria-describedby="button-addon2">
+          <button class="btn btn-banner" type="button" id="button-addon2" disabled>Send</button>
+        </div>
+
+      </div>
+    </section>
+  </footer>
+
+
 
 
   <!-- Bootstrap Script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+  <script src="Script/script.js"></script>
 </body>
 
 </html>
