--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
   <!-- Header Starts -->
   <header>
     <!-- Navbar Starts -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light pt-5">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="images/logo.png" alt="">
         </a>
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
 
-        <form class="d-flex ">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        </form>
+
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,14 +34,14 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
+            <li class="nav-item pe-lg-3">
               <a class="nav-link " href="#home">Home</a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item pe-lg-3">
               <a class="nav-link" href="#product">Product</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item pe-lg-3">
               <a class="nav-link" href="#contact">Contact Us</a>
             </li>
 
