--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Custom Stylesheet -->
   <link rel="stylesheet" href="Style/style.css">
 
-  <title>Document</title>
+  <title>Panda E-commerce</title>
 </head>
 
 <body>
